<resources>
    <string name="app_name">xapp Messenger</string>

    <string name="title1_login">Digite seu e-mail</string>
    <string name="title2_login">Digite sua senha</string>
    <string name="title3_login">Não tem conta? Cadastre-se</string>
    <string name="button_sign_in">Logar</string>
    <string name="todo">TODO</string>

    <string name="title1_cadastro">Digite seu nome</string>
    <string name="title2_cadastro">Digite sua senha</string>
    <string name="title3_cadastro">Digite seu e-mail</string>

    <string name="senha_vazia">Preencha a senha!</string>
    <string name="nome_vazio">Preencha o nome!</string>
    <string name="email_vazio">Preencha o e-mail!</string>

    <string name="cadastro_sucesso">Usuário cadastrado com sucesso!</string>
    <string name="cadastro_erro">Erro ao cadastrar usuário, tente novamente mais tarde!</string>

    <string name="exception_senha_fraca">Digite uma senha mais forte</string>
    <string name="exception_email_invalido">Digite um e-mail válido</string>
    <string name="exception_usuario_ja_cadastrado">Este e-mail já está cadastrado</string>

    <string name="exception_email_senha">E-mail e/ou senha não correspondem</string>
    <string name="exception_usuario_nao_cadastrado">Usuário não cadastrado</string>

    <string name="upload_image_error">Erro ao Fazer upload da Imagem</string>
    <string name="upload_image_sucess">Sucesso ao Fazer upload da Imagem</string>

    <string name="toolbar_pesquisar">Pesquisar</string>
    <string name="toolbar_config">Configurações</string>
    <string name="sair">Sair</string>

    <string name="fragment_name_contato">Contatos</string>
    <string name="fragment_name_conversas">Conversas</string>

    <string name="info_config">Esse não é o seu nome de usuário, nem sua senha. Esse nome ficará visível para seus contatos do xapp</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_grupo">GrupoActivity</string>
    <string name="title_activity_cadastro_grupo">CadastroGrupoActivity</string>
</resources>
